/*
 * $Id: ChangeLog,v 1.1250 2003/07/15 00:57:02 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-07-15 10:20 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * include/hbset.h
     * only define HB_OS_WIN_32_USED when not defined yet.

   * source/compiler/genc.c
   * source/odbc/odbc.c
   * source/rtl/filesys.c
   * source/rtl/hbxml.c
   * source/rtl/regex.c
   * source/rtl/hbcompress.c
   * source/rtl/hbsrlraw.c
   * source/rtl/hbcrypt.c
   * source/vm/inet.c
   * source/vm/hvm.c
     * Fixed compiler warnings

2003-07-15 02:15 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hbxml.c
  * source/vm/extend.c
    ! Fixed compilation warnings

  * tests/mtstress.prg
    ! Added WITH OBJECT TEST
    ! Tests are now 10000 for test type, for higher stress :-)

2003-07-15 01:25 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/estack.c
  * source/vm/hvm.c
  * source/vm/thread.c
  * source/vm/errorapi.c
    ! fixed initialization and termination issues of the virtual machine
      under MT. Maybe we can reproject it a little better for the future,
      but the current version is working well.

2003-07-14 18:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/achoice.prg
    ! Fix display problem when the len of achoice is only one line.
      nTop == nBottom.
      Reported by Jeremias Luna.

2003-07-14 21:15 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/codebloc.c
  * source/vm/memvars.c
  * source/vm/thread.c
  * source/vm/itemapi.c
  * include/thread.h
    ! thread safed private and memvars
    + Added hb_itemClearMT() function for some that is able
      to get another thread's stack to clear a Memvar. This requires
      cooperation of thread.c and memvars.c (that have now some MT specific
      functions).
      